harbor/endpoint.yml
apiVersion: v1
kind: Service
metadata:
  name: harbor-ext-svc
  namespace: openstack
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
---
apiVersion: v1
kind: Endpoints
metadata:
  name: harbor-ext-svc
  namespace: openstack
subsets:
  - addresses:
      - ip: 192.168.20.100
    ports:
      - port: 5000
