harbor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: harbor
  namespace: openstack
spec:
  tls:
    - hosts:
        - "harbor.ctl1-humanz.cloud"
      secretName: humanz-cloud-tls
  ingressClassName: nginx
  rules:
  - host: harbor.ctl1-humanz.cloud
    http:
      paths:
      - backend:
          service:
            name: harbor-ext-svc
            port:
              number: 80
        path: /
        pathType: Prefix
